--- a/assets/css/new-age.css
+++ b/assets/css/new-age.css
@@ -154,9 +154,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #24cfdc);
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #24cfdc);
+  background: url("../img/bg-pattern.png"), #2C3E50;
+  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left,#2C3E50,#4CA1AF);
+  background: url("../img/bg-pattern.png"), linear-gradient(to left,#2C3E50,#4CA1AF);
 }
 
 header.masthead .header-content {
@@ -285,7 +285,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("../img/bg-cta.jpg");
+  background-image: url(assets\img\background.jpg);
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -348,11 +348,11 @@ section.contact ul.list-social li a {
   border-radius: 100%;
 }
 
-section.contact ul.list-social li.social-twitter a {
-  background-color: #1da1f2;
+section.contact ul.list-social li.social-github a {
+  background-color: #000000;
 }
 
-section.contact ul.list-social li.social-twitter a:hover {
+section.contact ul.list-social li.social-github a:hover {
   background-color: #0d95e8;
 }
 
@@ -364,11 +364,11 @@ section.contact ul.list-social li.social-facebook a:hover {
   background-color: #344e86;
 }
 
-section.contact ul.list-social li.social-google-plus a {
-  background-color: #dd4b39;
+section.contact ul.list-social li.social-instagram a {
+  background-color: #b39bc8;
 }
 
-section.contact ul.list-social li.social-google-plus a:hover {
+section.contact ul.list-social li.social-instagram a:hover {
   background-color: #d73925;
 }
 
@@ -399,8 +399,8 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 .bg-primary {
   background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: -webkit-linear-gradient(#eacda3, #d6ae7b);
+  background: linear-gradient(#eacda3, #d6ae7b);
 }
 
 .text-primary {
